--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,6 +13,25 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <title>React App</title>
+
+  <style>
+    html {
+      height: 100%;
+    }
+
+    #root {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+    }
+
+    body {
+      margin: 0;
+      /* display: flex;
+      flex-direction: column; */
+      height: 100%;
+    }
+  </style>
 </head>
 
 <body>
